src/test/deca/context/valid/decl_class_within_same_class.deca
class A {
A a;
}
class B extends A{
A b;
}
{
A x;
B y;
x=y;
}