src/test/deca/context/invalid/compar_class.deca
class A {
int x;
}
class B {
float y;
}
{
A a;
B b;
a>b;
}